<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >
        <TextView
            android:id="@+id/stock_symbol"
            style="@style/StockSymbolTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/goog"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            >
            <TextView
                android:id="@+id/bid_price"
                style="@style/BidPriceTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10sp"
                android:paddingEnd="10sp"
                android:paddingLeft="10sp"
                android:paddingStart="10sp"
                android:text="@string/_1000_00"
                />
            <TextView
                android:id="@+id/change"
                android:background="@drawable/percent_change_pill"
                style="@style/PercentChangeTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/_100"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>