<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/AppBarLayout"
        android:fitsSystemWindows="true"
        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="60dp"
            >
            <ImageView
                android:id="@+id/main.backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@drawable/collapse_stock"
                android:contentDescription="@string/expanded_app_icon"
                app:layout_collapseMode="parallax"
                />
            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                >
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="8dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/material_blue_500"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/card_view"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="20dp">


                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:contentDescription="@string/chart_description"
                        />


                    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/detail_additional_pane"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:padding="3dp"
                        android:paddingBottom="16dp"
                        android:paddingTop="30dp">

                        <TextView
                            android:id="@+id/symbol_label"
                            android:text="@string/symbole_label"
                            android:layout_width="wrap_content"
                            style="@style/StockDetailText"/>

                        <TextView
                            android:id="@+id/symbol_text"
                            android:text="@string/test_string"
                            android:layout_width="match_parent"
                            android:layout_toEndOf="@+id/symbol_label"
                            android:layout_alignTop="@+id/symbol_label"
                            android:layout_alignBottom="@+id/symbol_label"
                            style="@style/StockDetailText"
                            />

                        <TextView
                            android:id="@+id/name_label"
                            android:text="@string/name_label"
                            android:layout_below="@+id/symbol_label"
                            android:layout_width="wrap_content"
                            style="@style/StockDetailText"
                            />

                        <TextView
                            android:id="@+id/name_text"
                            android:text="@string/test_string"
                            android:layout_width="match_parent"
                            android:layout_toEndOf="@+id/name_label"
                            android:layout_alignTop="@+id/name_label"
                            android:layout_alignBottom="@+id/name_label"
                            style="@style/StockDetailText"
                            />

                        <TextView
                            android:id="@+id/currency_label"
                            android:text="@string/currency_label"
                            android:layout_width="wrap_content"
                            android:layout_below="@+id/name_label"
                            style="@style/StockDetailText"
                            />


                        <TextView
                            android:id="@+id/currency_text"
                            android:text="@string/test_string"
                            android:layout_toEndOf="@+id/currency_label"
                            android:layout_alignTop="@+id/currency_label"
                            android:layout_alignBottom="@+id/currency_label"
                            android:layout_width="match_parent"
                            style="@style/StockDetailText"
                            />


                        <TextView
                            android:id="@+id/stockExchange_label"
                            android:layout_below="@+id/currency_label"
                            android:text="@string/exchange_label"
                            style="@style/StockDetailText"
                            android:layout_width="wrap_content" />

                        <TextView
                            android:id="@+id/stockExchange_text"
                            android:layout_width="match_parent"
                            style="@style/StockDetailText"
                            android:text="@string/test_string"
                            android:layout_toEndOf="@+id/stockExchange_label"
                            android:layout_alignTop="@+id/stockExchange_label"
                            android:layout_alignBottom="@+id/stockExchange_label"
                            />
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
